WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
219333
Non-unified build fixes, late November 2020 edition, take three
https://bugs.webkit.org/show_bug.cgi?id=219333
Summary
Non-unified build fixes, late November 2020 edition, take three
Don Olmstead
Reported
2020-11-28 21:25:42 PST
Breaking the build Breaking the build
Attachments
Patch
(2.03 KB, patch)
2020-11-28 21:28 PST
,
Don Olmstead
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Don Olmstead
Comment 1
2020-11-28 21:28:08 PST
Created
attachment 414987
[details]
Patch
EWS
Comment 2
2020-11-28 22:33:03 PST
Committed
r270225
: <
https://trac.webkit.org/changeset/270225
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 414987
[details]
.
Radar WebKit Bug Importer
Comment 3
2020-11-28 22:34:17 PST
<
rdar://problem/71779445
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug